--- a/test.html
+++ b/test.html
@@ -26,18 +26,18 @@
         tr:hover {
             background-color: #f5f5f5;
         }
-        input[type="text"], input[type="submit"] {
+        input[type="text"], input[type="submit"], button {
             padding: 8px;
             margin: 5px;
         }
-        input[type="submit"] {
+        input[type="submit"], button {
             background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
             border-radius: 4px;
         }
-        input[type="submit"]:hover {
+        input[type="submit"]:hover, button:hover {
             background-color: #45a049;
         }
         .form-section {
@@ -52,11 +52,21 @@
             border-radius: 5px;
             margin-top: 20px;
         }
+        .comment-item {
+            background-color: white;
+            padding: 10px;
+            margin: 5px 0;
+            border-radius: 3px;
+        }
+        .comment-deleted {
+            text-decoration: line-through;
+            opacity: 0.6;
+        }
     </style>
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Post Management System</h1>
+    <h1>Post & Comments Management System</h1>
     
     <div class="form-section">
         <h2>Add/Edit Post</h2>
